# vortex

./: .gitignore  Dockerfile  Makefile  README.md  convert_checkpoint_to_vortex.py  dna_prompt.txt  generate.py  generate.sh  generate_speculative.py  generate_transformers.py  pyproject.toml  repro_base40b_3kprompt.sh  requirements.txt  run  run_repro.sh  run_repro_3kprompt.sh  setup.py  speculative_generate.py  speculative_generate.sh  test_draft_models.sh  test_savanna_conversion.py  test_speculative.sh
configs/: 7b_stripedhyena2_base_4M_resume.yml  shc-evo2-40b-8k-11T-v2.yml  shc-evo2-7b-8k.yml
model/: utils.py
nim/: model_defs.py  nim_vortex_api.py  openapi.json
primitives/triton_kernels/cgcg/: interface.py  ref_bwd.py  ref_fwd.py
primitives/triton_kernels/cgcg/src/: _bwd_tma.py  _bwd_two_kernel.py  _fwd_tma.py  bwd.py  bwd_kernels.py  fwd.py  fwd_kernels.py
primitives/triton_kernels/cgcg/tests/: test_bwd.py  test_conv1d_wgrad.py  test_fwd.py  test_log_analysis.ipynb  test_tma_ldst.py  test_two_pass_ref.py  utils.py
test/: accuracy_test_forward.py  accuracy_test_generation.py  test_backward.py  test_forward.py  test_numerics.py  test_prefill.py  test_speculative.py
test/generation/: test_generation.py
test/generation/data/: euk_prompts.csv
vortex/: __init__.py  logging.py
vortex/model/: attention.py  cache.py  engine.py  generation.py  layers.py  model.py  positional_embeddings.py  sample.py  speculative.py  tokenizer.py  utils.py
