#[build-system]
#requires = [
#    "torch",
#    "setuptools>=42",
#    "wheel",
#    "cmake",
#    "pybind11",
#    "ninja",
#    "numpy",
#]
#build-backend = "setuptools.build_meta"

[project]
name = "vtx"
version = "1.0.6"
description = "Reference implementation of operators for deep signal processing architectures"
readme = "README.md"
authors = [{ name = "Michael Poli" }]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "torch",
    "numpy",
    "einops==0.8.0",
    "packaging",
    "rich",
    "tqdm",
    "PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vortex*"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
combine_as_imports = true
combine_star = true
